updated changelog and version

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -33,6 +33,14 @@ In case some technical aspect is not working you can raise an issue in our [gith
 
 # Changelog
 
+### 02 May 2022: Bug Fixes
+
+ - "Country" selection in Archives can now be edited
+ - Improved field validation when adding new Sources
+ - Improved data inheritance when adding related Sources
+ - Fixed permission issues related bugs
+ - Audience size information is now displayed correctly and formatted with comma separation
+
 ### 11 Apr 2022: Update to Version 1.0
 
 Larger update where background processes were improved and major section of the source code were refactored.
