--- a/flaskinventory/templates/emails/layout.html
+++ b/flaskinventory/templates/emails/layout.html
@@ -6,7 +6,7 @@
     <!-- Published by Github User leemunroe under MIT License -->
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>{% if subject %}{{ subject }}{% else %}OPTED WP3{% endif %}</title>
+    <title>{% if subject %}{{ subject }}{% else %}OPTED Meteor{% endif %}</title>
     <style>
         /* -------------------------------------
         RESPONSIVE AND MOBILE FRIENDLY STYLES
