--- a/flaskinventory/templates/guides/faq.html
+++ b/flaskinventory/templates/guides/faq.html
@@ -4,7 +4,7 @@
 <h1>Frequently Asked Questions</h1>
 
 <p class="lead">Making entries to the inventory can sometimes be confusing. Therfore, we collected some frequently asked questions here. 
-All questions are curated by the WP3 Team and the list is updated irregularly. If your question is not answered here, you can <a href="{{ url_for('main.about') }}">ask us and we are happy to help</a>.</p>
+All questions are curated by the Meteor Team (WP3 of the OPTED Consortium) and the list is updated irregularly. If your question is not answered here, you can <a href="{{ url_for('main.about') }}">ask us and we are happy to help</a>.</p>
 
 {% filter markdown %} 
 
