--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -2,7 +2,7 @@
 <h1>Resources</h1>
 
 <p class="lead">This is a collection of online resources that provide useful background and meta information on the media landscape in Europe.
-All resources are curated by the WP3 Team and the list is updated irregularly.</p>
+All resources are curated by the Meteor Team (WP3 of the OPTED Consortium) and the list is updated irregularly.</p>
 
 {% filter markdown %}
 
