--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -2,7 +2,9 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <img class="bi me-2" height="40" src="{{ url_for('static', filename='opted_logo_stylized_blue.svg') }}">
-            <span class="fs-4">WP3 Inventory</span>
+            <span class="fs-4 header-branding-serif">Meteor <br>
+                <span class="header-branding-small">Media Text Open Registry</span>
+            </span>
             <span class="text-muted ps-4 fs-6">v{{ config.get('APP_VERSION') }}</span>
         </a>
         <var id="result-container" class="result-container"></var>
