--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -3,11 +3,11 @@
 
 <h1>About</h1>
 
-<p class="lead">The OPTED inventory for European media is part of the EU-funded Project OPTED where researchers work towards the creation of a new European research infrastructure for the study of political communication in Europe. 
+<p class="lead">OPTED Meteor (Media Text Open Registry) is an inventory for European journalistic texts and is part of the EU-funded Project OPTED where researchers work towards the creation of a new European research infrastructure for the study of political communication in Europe. 
 Please visit <a href="https://opted.eu" target="_blank">opted.eu</a> for more information about the project.</p>
 
 <p class="lead">
-The OPTED inventory for European media is designed by Work Package 3 (<a href="https://compcommlab.univie.ac.at/" target="_blank">University of Vienna</a>)
+<em>Meteor</em> is designed by Work Package 3 (<a href="https://compcommlab.univie.ac.at/" target="_blank">University of Vienna</a>)
 </p>
 
 {% filter markdown %}
@@ -32,6 +32,10 @@ In case some technical aspect is not working you can raise an issue in our [gith
 - Schwaiger, L. (2022). *Gegen die Öffentlichkeit: Alternative Nachrichtenmedien im deutschsprachigen Raum*. Bielefeld: transcript Verlag. [10.1515/9783839461211](https://doi.org/10.1515/9783839461211) (List of alternative media for German speaking countries).
 
 # Changelog
+
+### 30 Jun 2022: Branding
+
+ - Globally changed branding from "WP3" to "Meteor"
 
 ### 02 May 2022: Bug Fixes
 
