--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -3,7 +3,7 @@
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <img class="bi me-2" height="40" src="{{ url_for('static', filename='opted_logo_stylized_blue.svg') }}">
             <span class="fs-4 header-branding-serif">Meteor <br>
-                <span class="header-branding-small">Media Text Open Registry</span>
+                <span class="header-branding-small">Media Texts Open Registry</span>
             </span>
             <span class="text-muted ps-4 fs-6">v{{ config.get('APP_VERSION') }}</span>
         </a>
