--- a/flaskinventory/templates/view/elements/tool/about.html
+++ b/flaskinventory/templates/view/elements/tool/about.html
@@ -17,6 +17,14 @@
                 <span class="badge bg-indigo me-2">{{programming_language}}</span>
             {% endfor %}
         {% endif %}
+        {% if entry.open_source %}
+            <dt class="col-sm-3">Open Source</dt>
+            <dd class="col-sm-9">Yes</dd>
+        {% endif %}
+        {% if entry.user_access %}
+            <dt class="col-sm-3">User Access</dt>
+            <dd class="col-sm-9">{{ entry.user_access }}</dd>
+        {% endif %}
         {% if entry.used_for %}
         <dt class="col-sm-3">Used For</dt>
         <dd class="col-sm-9">
@@ -79,6 +87,10 @@
                 <p class="card-text"><a href="{{ url_for('view.view_uid', uid=corpus.uid) }}">{{corpus.name}}</a>
             {% endfor %}
         </dd>
+        {% endif %}
+        {% if entry.license %}
+            <dt class="col-sm-3">License</dt>
+            <dd class="col-sm-9">{{ entry.license }}</dd>
         {% endif %}
         
     </dl>
