--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -106,6 +106,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_newssource') }}" tabindex="-1"><i class="fas fa-book-open me-2 fa-fw"></i>Guides</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_resources') }}" tabindex="-1"><i class="fas fa-boxes me-2 fa-fw"></i>Resources</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('main.guides_teaching') }}" tabindex="-1"><i class="fas fa-chalkboard me-2 fa-fw"></i>Teaching Materials</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_faq') }}" tabindex="-1"><i class="fas fa-question-circle me-2 fa-fw"></i>FAQ</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.about') }}" tabindex="-1"><i class="fas fa-envelope-open-text me-2 fa-fw"></i>Contact us</a></li>
                 </ul>
