#150 correct rendition of "open_source"

--- a/flaskinventory/templates/view/elements/tool/about.html
+++ b/flaskinventory/templates/view/elements/tool/about.html
@@ -19,7 +19,7 @@
         {% endif %}
         {% if entry.open_source %}
             <dt class="col-sm-3">Open Source</dt>
-            <dd class="col-sm-9">Yes</dd>
+            <dd class="col-sm-9">{{ entry.open_source }}</dd>
         {% endif %}
         {% if entry.user_access %}
             <dt class="col-sm-3">User Access</dt>
