--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -9,7 +9,7 @@
         </a>
         <var id="result-container" class="result-container"></var>
 
-        <form class="w-50" id="search-everything" name="search-everything" method="GET" action="{{ url_for('view.search') }}">
+        <form style="width: 35%!important;" id="search-everything" name="search-everything" method="GET" action="{{ url_for('view.search') }}">
             <div class="typeahead__container">
                 <div class="">
                     <div class="typeahead__query input-group">
@@ -100,16 +100,18 @@
             {% endif %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                   Help
+                    <i class="fas fa-boxes me-2 fa-fw"></i>Resources
                 </a>
 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_newssource') }}" tabindex="-1"><i class="fas fa-book-open me-2 fa-fw"></i>Guides</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('main.guides_resources') }}" tabindex="-1"><i class="fas fa-boxes me-2 fa-fw"></i>Resources</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('main.guides_resources') }}" tabindex="-1"><i class="fas fa-external-link-alt me-2 fa-fw"></i>Link Collection</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_teaching') }}" tabindex="-1"><i class="fas fa-chalkboard me-2 fa-fw"></i>Teaching Materials</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_faq') }}" tabindex="-1"><i class="fas fa-question-circle me-2 fa-fw"></i>FAQ</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('main.about') }}" tabindex="-1"><i class="fas fa-envelope-open-text me-2 fa-fw"></i>Contact us</a></li>
                 </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('main.about') }}" tabindex="-1"><i class="fas fa-envelope-open-text me-2 fa-fw"></i>About</a>
             </li>
         </ul>
 
