--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -92,10 +92,10 @@
 
 
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('users.login') }}" tabindex="-1">Login</a>
+                <a class="nav-link" href="{{ url_for('users.login') }}" tabindex="-1"><i class="fas fa-power-off me-2 fa-fw"></i>Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('users.register') }}" tabindex="-1">Register</a>
+                <a class="nav-link" href="{{ url_for('users.register') }}" tabindex="-1"><i class="fas fa-user-plus me-2 fa-fw"></i>Register</a>
             </li>
             {% endif %}
             <li class="nav-item dropdown">
