--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -33,6 +33,10 @@ In case some technical aspect is not working you can raise an issue in our [gith
 
 # Changelog
 
+### 05 Jul 2022: Materials
+
+ - Added teaching materials and rearranged top navigation
+
 ### 30 Jun 2022: Branding
 
  - Globally changed branding from "WP3" to "Meteor"
