--- a/flaskinventory/templates/add/sidebar.html
+++ b/flaskinventory/templates/add/sidebar.html
@@ -6,7 +6,7 @@
     <div class="list-group list-group-flush border-bottom scrollarea p-3">
 
         <p>
-            If you provide a DOI, arXiv, Python module, or R-Package name, the inventory tries to get some data automatically!
+            If you provide a DOI, arXiv, Python module, R-Package name, or GitHub repository, the inventory tries to get some data automatically!
         </p>
 
         <div class="row">
@@ -16,6 +16,7 @@
                                 <option value="arxiv">arXiv</option>
                                 <option value="cran">CRAN</option>
                                 <option value="doi">DOI</option>
+                                <option value="github">GitHub</option>
                                 <option value="python">Python</option>
                               </select>
             </div>
