#150 better tom select

--- a/flaskinventory/templates/helpers/_tomselect.html
+++ b/flaskinventory/templates/helpers/_tomselect.html
@@ -426,9 +426,9 @@ if (embeddedJSON) {
     {% endif %}
 
     {% if 'related_publications' in fields %}
-    
-    new TomSelect('#related_publications', {plugins: ['remove_button']})
-    
+    if (document.querySelector('#related_publications')) {
+        new TomSelect('#related_publications', {plugins: ['remove_button']})
+    }
     {% endif %}
 
     {% if 'tools_used' in fields %}
