#154 prevent user from adding channels

--- a/flaskinventory/templates/helpers/_tomselect.html
+++ b/flaskinventory/templates/helpers/_tomselect.html
@@ -322,7 +322,7 @@ if (embeddedJSON) {
 
     {% if 'channels' in fields %}
     
-    new TomSelect('#channels', {create: true, plugins: ['remove_button']})
+    new TomSelect('#channels', {create: false, plugins: ['remove_button']})
     
     {% endif %}
 
