--- a/flaskinventory/static/css/main.css
+++ b/flaskinventory/static/css/main.css
@@ -204,6 +204,17 @@ dt {
         font-family: var(--bs-body-font-family);
 }
 
+/* External Links */
+
+.external-link::after {
+    content: "\f35d";
+    font-family: 'Font Awesome 5 Free';
+    font-size: 0.8em;
+    padding-left: 0.6em;
+    text-decoration: none;
+    display: inline-block;
+}
+
 /* Markdown styling */
 
 .toclink {
