--- a/flaskinventory/templates/helpers/_viewhelpers.html
+++ b/flaskinventory/templates/helpers/_viewhelpers.html
@@ -45,9 +45,7 @@
 
 {% macro render_publication(publication) %}
 
-<a href="{{ url_for('view.view_uid', uid=publication.uid) }}" class="me-2">
-    {{ publication.title if publication.title else publication.name }}
-</a>
+<a href="{{ url_for('view.view_uid', uid=publication.uid) }}" class="me-2">{{ publication.title if publication.title else publication.name }}</a>
 <span>
 {% if publication.authors is string %} 
     {{ publication.authors }}
